Revision history for Progress-Any

0.10    2013-08-24 (SHARYANTO) (not yet released)

        - Rework internals and some API.

        [ENHANCEMENTS]

        - Allow reinitializing 'pos' and 'target' (and all other rw attributes)
          at subsequent get_indicator() for the same task. This is to make
          program more predictable, instead of silently ignoring parameters.

        - Add task title (in addition to name).

        - Allow specifying estimated remaining of a task when creating an
          indicator, via passing 'remaining'.

        - New fill templates: %r (remaining time), %R (remaining time or elapsed
          time).

        [INCOMPATIBLE CHANGES]

        - The $progress export is now set to the root ('') indicator instead of
          'main', so it includes all indicators.

        - fill_template(): re-rationalize template names: %a (elapsed time)
          becomes %e, %c (pos) becomes %P, %C (target) becomes %T, %t (task
          name) becomes %n.

        [REMOVED FEATURES]

        - Remove total_target() (ambiguous name). Currently to get this, use
          fill_template('%T').

        - Remove 'status' in update() because it is unneeded (concerning outputs
          can use 'message' instead).


0.09    2013-05-18 (SHARYANTO)

        - Bugfix: double counting of children's targets.


0.08    2013-05-18 (SHARYANTO)

        - Bugfix: update() didn't recognize 'finished' parameter.

        - Maintain a root-level indicator (task='') to capture updates from all
          progress indicators.


0.07    2013-05-18 (SHARYANTO)

        [ENHANCEMENTS]

        - Add total_target().


0.06    2013-05-18 (SHARYANTO)

        [INCOMPATIBLE CHANGES]

        - Change default task in get_indicator() to be caller's package, not
          subroutine.


0.05    2013-05-18 (SHARYANTO)

        - Happy birthday, bro!

        [INCOMPATIBLE CHANGES]

        - Revise API, now more resembles Log::Any and incompatible with previous